--- a/.gitattributes
+++ b/.gitattributes
@@ -24,3 +24,4 @@
 *.expax filter=lfs diff=lfs merge=lfs -text
 /apps/jmeint-enerj/log filter=lfs diff=lfs merge=lfs -text
 /apps/sobel/log filter=lfs diff=lfs merge=lfs -text
+/apps/jmeint/log filter=lfs diff=lfs merge=lfs -text
