simple if-conversion has been applied to benchmarks

--- a/apps/jmeint/build.xml
+++ b/apps/jmeint/build.xml
@@ -26,7 +26,7 @@
     <property name="expaxanal.flag" value="${user.dir}/analysis.flag" />
     <property name="expaxanal.result" value="${user.dir}/analysis.result" />
 
-    <condition property="enerjc.args" value="-Alint=mbstatic,expax,expaxdebug,${expaxanal.flag},${expaxbc.info},${expaxanal.result}" else="-Alint=mbstatic,simulation,expax,expaxdebug,${expaxanal.flag},${expaxbc.info},${expaxanal.result}"> 
+    <condition property="enerjc.args" value="-Alint=mbstatic,expax,${expaxanal.flag},${expaxbc.info},${expaxanal.result}" else="-Alint=mbstatic,simulation,expax,${expaxanal.flag},${expaxbc.info},${expaxanal.result}"> 
         <isset property="env.EnerJNoSim" />
     </condition>
     <condition property="enerjc.verbose" value="false" else="true">
