instrumentation is updated so that it is compatible with r2.analysis

--- a/r2.apps/.gitignore
+++ b/r2.apps/.gitignore
@@ -5,3 +5,12 @@ analysis.result
 analysis.flag
 results.json
 enerjstats.json
+enerjnoiseconsts.json
+fft.jar
+mc.jar
+sor.jar
+sobel.jar
+lu.jar
+smm.jar
+simpleRaytracer.jar
+jmeint.jar
