--- a/r2.userstudy/mc-enerj/build.xml
+++ b/r2.userstudy/mc-enerj/build.xml
@@ -19,14 +19,14 @@
     <property name="enerj.checker" value="enerj.PrecisionChecker" />
 
 		<!-- ExpAX -->
-		<property name="expax.dir" value="${env.EXPAX_ANALYSIS}" />
-		<property name="expax.jar" value="${expax.dir}/expax-analysis.jar" />
+		<property name="r2.dir" value="${env.R2_ANALYSIS}" />
+		<property name="r2.jar" value="${r2.dir}/r2-analysis.jar" />
 
-    <property name="expaxbc.info" value="${user.dir}/mc-bc-offset.info" /> 
-    <property name="expaxanal.flag" value="${user.dir}/analysis.flag" />
-    <property name="expaxanal.result" value="${user.dir}/analysis.result" />
+    <property name="r2bc.info" value="${user.dir}/mc-bc-offset.info" /> 
+    <property name="r2anal.flag" value="${user.dir}/analysis.flag" />
+    <property name="r2anal.result" value="${user.dir}/analysis.result" />
 
-    <condition property="enerjc.args" value="-Alint=mbstatic,${expaxanal.flag},${expaxbc.info},${expaxanal.result}" else="-Alint=mbstatic,simulation,${expaxanal.flag},${expaxbc.info},${expaxanal.result}"> 
+    <condition property="enerjc.args" value="-Alint=mbstatic,${r2anal.flag},${r2bc.info},${r2anal.result}" else="-Alint=mbstatic,simulation,${r2anal.flag},${r2bc.info},${r2anal.result}"> 
         <isset property="env.EnerJNoSim" />
     </condition>
     <condition property="enerjc.verbose" value="false" else="true">
@@ -35,17 +35,17 @@
     <presetdef name="enerjc">
 <!--        <jsr308.javac verbose="${enerjc.verbose}"> -->
 			  <jsr308.javac>
-            <compilerarg line="-Xbootclasspath/a:${cfrt.jar}:${enerj.jar}:${expax.jar} -processorpath ${cfrt.jar}:${enerj.jar} -processor ${enerj.checker}" />
+            <compilerarg line="-Xbootclasspath/a:${cfrt.jar}:${enerj.jar}:${r2.jar} -processorpath ${cfrt.jar}:${enerj.jar} -processor ${enerj.checker}" />
             <compilerarg line="${enerjc.args}" />
-            <compilerarg line="-expaxanalflag ${expaxanal.flag}" />
-            <compilerarg line="-expaxbcinfo ${expaxbc.info}" />
-						<compilerarg line="-expaxgen false" />
-						<compilerarg line="-expaxast false" />
+            <compilerarg line="-r2analflag ${r2anal.flag}" />
+            <compilerarg line="-r2bcinfo ${r2bc.info}" />
+						<compilerarg line="-r2gen false" />
+						<compilerarg line="-r2ast false" />
         </jsr308.javac>
     </presetdef>
 
     <target name="copyflag">
-        <exec command="cp ${expax.dir}/analysis.flag ." />
+        <exec command="cp ${r2.dir}/analysis.flag ." />
     </target>
 
     <target name="build" depends="clean,copyflag">
@@ -61,7 +61,7 @@
 
     <target name="clean">
         <delete dir="build"/>
-				<delete dir="chord_output_expax"/>
+				<delete dir="chord_output_r2"/>
         <delete file="mc.jar"/>
 				<delete file="analysis.flag"/>
 				<delete file="analysis.result"/>
