--- a/r2.apps/sor/chord.properties
+++ b/r2.apps/sor/chord.properties
@@ -1,6 +1,6 @@
-chord.main.class=jnt.scimark2.commandline
-chord.class.path=build/
-chord.src.path=src/
+chord.main.class=jnt.scimark2.SOR
+chord.class.path=build/;/Users/jspark/projects/expax.code/expax.analysis/classes/
+chord.src.path=src/;/Users/jspark/projects/expax.code/expax.analysis/src/
 chord.run.ids=1
 chord.args.1=100
 chord.analysis.flag=analysis.flag
