chord.properties updated

--- a/r2.apps/sobel/chord.properties
+++ b/r2.apps/sobel/chord.properties
@@ -1,6 +1,6 @@
 chord.main.class=Sobel.RgbImage
-chord.class.path=build/;/Users/jspark/projects/r2.code/r2.analysis/classes/
-chord.src.path=src/;/Users/jspark/projects/r2.code/r2.analysis/src/
+chord.class.path=build/;/home/flexjava/r2.code/r2.analysis/classes/
+chord.src.path=src/;/home/flexjava/r2.code/r2.analysis/src/
 chord.run.ids=1
 chord.args.1=images/1.rgb
 chord.analysis.flag=analysis.flag
