--- a/r2.apps/fft/chord.properties
+++ b/r2.apps/fft/chord.properties
@@ -1,6 +1,6 @@
 chord.main.class=jnt.scimark2.FFT
-chord.class.path=build/;/Users/jspark/projects/expax.code/expax.analysis/classes/
-chord.src.path=src/;/Users/jspark/projects/expax.code/expax.analysis/src/
+chord.class.path=build/;/home/flexjava/r2.code/r2.analysis/classes/
+chord.src.path=src/;/home/flexjava/r2.code/r2.analysis/src/
 chord.run.ids=1
 chord.args.1=100
 chord.analysis.flag=analysis.flag
