--- a/r2.apps/simpleRaytracer/chord.properties
+++ b/r2.apps/simpleRaytracer/chord.properties
@@ -1,6 +1,6 @@
 chord.main.class=Plane
-chord.class.path=build/;/Users/jspark/projects/expax.code/expax.analysis/classes/
-chord.src.path=src/;/Users/jspark/projects/expax.code/expax.analysis/src/
+chord.class.path=build/;/home/flexjava/r2.code/r2.analysis/classes/
+chord.src.path=src/;/home/flexjava/r2.code/r2.analysis/src/
 chord.run.ids=1
 chord.args.1=2 1 30 10
 chord.analysis.flag=analysis.flag
